cmake_minimum_required(VERSION 3.2)
project(tank)
link_libraries(SDL2_image SDL2 SDL2main boost_system boost_filesystem)
add_compile_options(-g)
include_directories(${PROJECT_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_subdirectory(bumpcheck)
add_subdirectory(bumpcheck_extra)
add_subdirectory(graphic)
add_subdirectory(main)
add_subdirectory(core)