cmake_minimum_required(VERSION 3.2)
project(tank)
#include(cotire)
SET(CMAKE_CXX_COMPILER clang++)
add_compile_options(-std=c++14 -pthread)
find_package(Boost REQUIRED COMPONENTS filesystem system)
link_libraries(${Boost_LIBRARIES})
find_package(SDL2 REQUIRED COMPONENTS)
link_libraries(${SDL2_LIBRARIES})
link_libraries(SDL2_image pthread)
add_compile_options(-g)
include_directories(${PROJECT_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
add_subdirectory(bumpcheck)
add_subdirectory(bumpcheck_extra)
add_subdirectory(graphic)
add_subdirectory(main)
add_subdirectory(core)