cmake_minimum_required(VERSION 3.2)
project(tank)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
SET(CMAKE_CXX_COMPILER clang++)
add_compile_options(-std=c++14 -pthread)
find_package(Boost REQUIRED COMPONENTS filesystem system)
find_package(SDL2 REQUIRED)
find_package(SDL2_Image REQUIRED)
include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} )
link_libraries(${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} ${Boost_LIBRARIES} pthread)
add_compile_options(-g)
include_directories(${PROJECT_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
add_subdirectory(bumpcheck)
add_subdirectory(bumpcheck_extra)
add_subdirectory(graphic)
add_subdirectory(main)
add_subdirectory(core)
add_custom_command(OUTPUT config.xml COMMAND cp ${PROJECT_SOURCE_DIR}/xrc/config.xml config.xml)
add_custom_target(config DEPENDS config.xml)